// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LazyReducer 1`] = `
<div>
  DelayContainer 
  {"store":{"a":"a","b":"x"}}
</div>
`;

exports[`LazyReducer 2`] = `
<div>
  InnerComponent 
  {"x":"xxx","store":{"a":"a","b":"x","nameX":null}}
</div>
`;
